--- a/AtkTennisWeb/Views/Public/Reservation.cshtml
+++ b/AtkTennisWeb/Views/Public/Reservation.cshtml
@@ -958,8 +958,8 @@
         var c = resFinishTime.split(":");
 
         var nowTime = a[0] + a[1];
-        var sTime = b[0] + b[1];
-        var fTime = c[0] + c[1];
+        var sTime = b[0] + b[1]; //2109
+        var fTime = c[0] + c[1]; //2209
 
 
         if (sTime <= nowTime && fTime >= nowTime) {
