--- a/AtkTennisWeb/Views/Shared/_Layout.cshtml
+++ b/AtkTennisWeb/Views/Shared/_Layout.cshtml
@@ -331,6 +331,19 @@
                                 </a>
 
                                 <ul class="nav nav-treeview">
+                                    <li class="nav-item">
+                                        <a href="~/AdminHome/AllReservationList" class="nav-link">
+                                            <i class="fas fa-calendar-check nav-icon"></i>
+                                            <p>Rezervasyon Listesi</p>
+                                        </a>
+                                    </li>
+
+                                    <li class="nav-item">
+                                        <a href="~/AdminHome/AllReservationCancelList" class="nav-link">
+                                            <i class="fas fa-calendar-check nav-icon"></i>
+                                            <p>Rezervasyon İptal Listesi</p>
+                                        </a>
+                                    </li>
 
                                     <li class="nav-item">
                                         <a href="~/AdminHome/MultiReservations" class="nav-link">
@@ -404,17 +417,18 @@
 
                             <ul class="nav nav-treeview">
 
-                                <li class="nav-item">
-                                    <a href="~/AdminHome/DuesDebtOperations" class="nav-link">
-                                        <i class="fas fa-wallet nav-icon"></i>
-                                        <p>Aidat Ödemeleri</p>
-                                    </a>
-                                </li>
 
                                 <li class="nav-item">
                                     <a href="~/AdminHome/ReservationDebtOperations" class="nav-link">
                                         <i class="fas fa-wallet nav-icon"></i>
                                         <p>Rezervasyon Ödemeleri</p>
+                                    </a>
+                                </li>
+
+                                <li class="nav-item">
+                                    <a href="~/AdminHome/DuesDebtOperations" class="nav-link">
+                                        <i class="fas fa-wallet nav-icon"></i>
+                                        <p>Aidat Ödemeleri</p>
                                     </a>
                                 </li>
 
@@ -616,65 +630,11 @@
                             <ul class="nav nav-treeview">
 
                                 <li class="nav-item">
-                                    <a href="~/SystemSettings/IdentityRoleSettings" class="nav-link">
+                                    <a href="~/Report/DebtReports" class="nav-link">
                                         <i class="fas fa-id-card nav-icon"></i>
-                                        <p>Rol ve Yetkilendirme </p>
+                                        <p>Ödeme Raporları </p>
                                     </a>
                                 </li>
-
-
-                                <li class="nav-item">
-                                    <a href="~/SystemSettings/MemberSettings" class="nav-link">
-                                        <i class="fas fa-user nav-icon"></i>
-                                        <p>Üye Ayarları</p>
-                                    </a>
-                                </li>
-
-              
-
-                                <li class="nav-item">
-                                    <a href="~/SystemSettings/CourtSettings" class="nav-link">
-                                        <i class="fas fa-flag nav-icon"></i>
-                                        <p>Kort Ayarları </p>
-                                    </a>
-                                </li>
-
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link">
-                                        <i class="nav-icon fas fa-table-tennis"></i>
-                                        <p>
-                                            Eğitim Ayarları
-                                            <i class="right fas fa-angle-left"></i>
-                                        </p>
-                                    </a>
-                                    <ul class="nav nav-treeview">
-                                        <li class="nav-item">
-                                            <a href="~/SystemSettings/EducationSchoolSettings" class="nav-link">
-                                                <i class="far fa-circle nav-icon"></i>
-                                                <p>Okul</p>
-                                            </a>
-                                        </li>
-
-                                        <li class="nav-item">
-                                            <a href="~/SystemSettings/EducationPerformanceSettings" class="nav-link">
-                                                <i class="far fa-circle nav-icon"></i>
-                                                <p>Performans</p>
-                                            </a>
-                                        </li>
-
-
-                                        <li class="nav-item">
-                                            <a href="~/SystemSettings/EducationPrivateLessonSettings" class="nav-link">
-                                                <i class="far fa-circle nav-icon"></i>
-                                                <p>Özel Ders</p>
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </li>
-
-              
-                                
-
                             </ul>
                         </li>
 
