--- a/AtkTennisWeb/Views/AdminHome/DuesDebtOperations.cshtml
+++ b/AtkTennisWeb/Views/AdminHome/DuesDebtOperations.cshtml
@@ -321,13 +321,13 @@
 
                 }
 
-                if (res.memberDuesInf.duesPrice != 0) {
+                if (res.memberDuesInf.remainingPrice != 0) {
 
-                    $("#price").val(res.memberDuesInf.duesPrice)
+                    $("#price").val(res.memberDuesInf.remainingPrice)
                 }
 
                 else {
-                    $("#price").val(res.memberDuesInf.duesPrice)
+                    $("#price").val(res.memberDuesInf.remainingPrice)
                 }
 
             },
@@ -394,6 +394,8 @@
                             row += '<th>Aidat Yılı</th>';
                             row += '<th>Aidat Türü</th>';
                             row += '<th>Aidat Ücreti</th>';
+                            row += '<th>Ödenen Ücret</th>';
+                            row += '<th>Kalan Ücret</th>';
                             row += '<th>Borçlandırma Tarihi</th>';
                             row += '<th>Açıklama</th>';
                             row += '<th>Borç Durumu</th>';
@@ -415,6 +417,8 @@
                                     row += '<td>' + res.memberDuesInfTables[i].duesYear + '</td>';
                                     row += '<td>' + res.memberDuesInfTables[i].duesType + '</td>';
                                     row += '<td>' + res.memberDuesInfTables[i].duesPrice + '</td>';
+                                    row += '<td>' + res.memberDuesInfTables[i].paidPrice + '</td>';
+                                    row += '<td>' + res.memberDuesInfTables[i].remainingPrice + '</td>';
                                     row += '<td>' + res.memberDuesInfTables[i].date + '</td>';
                                     row += '<td>' + res.memberDuesInfTables[i].explain + '</td>';
 
