--- a/AtkTennisWeb/Views/SystemSettings/CourtSettings.cshtml
+++ b/AtkTennisWeb/Views/SystemSettings/CourtSettings.cshtml
@@ -88,9 +88,34 @@
                             <div>
                                 <button class="btn btn-outline-primary" data-toggle="modal" data-target="#addCourtPrice"><i class="fas fa-plus-square"></i></button>
                             </div>
+
+                        </div>
+                        <div class="card-header d-flex justify-content-between">
+
+                            <div>
+                                <button class="btn btn-primary">Balon Kort</button>
+                            </div>
+
+                            <div>
+                                <button class="btn btn-primary">Kapalı Kort</button>
+                            </div>
+
+                            <div>
+                                <button class="btn btn-primary" >Açık Kort Toprak</button>
+                            </div>
+
+                            <div>
+                                <button class="btn btn-primary">Açık Kort Toprak</button>
+                            </div>
+
+                            <div>
+                                <button class="btn btn-primary">Açık Kort Toprak</button>
+                            </div>
+
                         </div>
 
                         <div class="card-body">
+
                             <table id="courtPriceTable" class="table table-bordered table-hover">
                                 <thead>
                                     <tr style="text-align:center">
